--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
   padding: 0px;
   margin: 0px;
-  font-family: "Helvetica", sans-serif;
+  font-family: "Bold", sans-serif;
   overflow: hidden;
 }
 
 #map {
-  height: 200px;
+  height: 205px;
   width: 100vw;
   position: absolute;
   border-bottom: 3px solid orange;
@@ -32,7 +32,7 @@ body {
 }
 
 #top {
-  height: 40px;
+  height: 45px;
   margin: 0;
 }
 
@@ -47,7 +47,7 @@ body {
   position: absolute;
   left: 0;
   top: 203px;
-  background-color: white;
+  background-color: blue;
   width: 100vw;
   z-index: 100;
   margin: 0;
@@ -60,8 +60,8 @@ body {
 .chapter-container {
   /* margin + padding = chapterContainerMargin in script.js */
   /* Important for scrolling! */
-  margin: 50px 0 0 0;
-  padding: 20px 0 0 0;
+  margin: 60px 0 0 0;
+  padding: 25px 0 0 0;
   text-align: center;
 }
 
@@ -105,10 +105,10 @@ body {
 .source {
   font-size: 9pt;
   font-style: italic;
-  color: gray;
+  color: purple;
 }
 a.source:visited {
-  color: grey;
+  color: yellow;
 }
 
 .description {
